--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "firebase": "^9.2.0",
+    "glightbox": "^3.1.0",
+    "isotope-layout": "^3.0.6",
     "ng-multiselect-dropdown": "^0.3.7",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
+    "swiper": "^7.2.0",
     "tslib": "^2.3.0",
+    "typed.js": "^2.0.12",
+    "waypoints": "^4.0.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -35,6 +40,7 @@
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
     "@types/aos": "^3.0.4",
+    "@types/isotope-layout": "^3.0.9",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.20.36",
     "jasmine-core": "~3.8.0",
