--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@popperjs/core": "^2.10.2",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "firebase": "^9.2.0",
