--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ chrome-profiler-events*.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/environment.prod.ts
+!.vscode/environment.ts
 .history/*
 
 # misc
