--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/locale",
+              "src/environment"
             ],
             "styles": [
               "src/styles.scss",
@@ -45,7 +47,7 @@
               "node_modules/glightbox/dist/js/glightbox.min.js",
               "node_modules/isotope-layout/dist/isotope.pkgd.min.js",
               "node_modules/swiper/swiper-bundle.min.js",
-              "node_modules/typed.js/lib/typed.min.js",
+              
               "node_modules/waypoints/lib/noframework.waypoints.js"
             ],
             "browser": "src/main.ts"
@@ -109,9 +111,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/locale",
+              "src/environment"
             ],
             "styles": [
+              "node_modules/primeicons/primeicons.css",
               "src/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
@@ -123,7 +128,6 @@
               "node_modules/glightbox/dist/js/glightbox.min.js",
               "node_modules/isotope-layout/dist/isotope.pkgd.min.js",
               "node_modules/swiper/swiper-bundle.min.js",
-              "node_modules/typed.js/lib/typed.min.js",
               "node_modules/waypoints/lib/noframework.waypoints.js"
             ]
           }
