--- a/package.json
+++ b/package.json
@@ -14,27 +14,29 @@
     "@angular/common": "^20.1.1",
     "@angular/compiler": "^20.1.1",
     "@angular/core": "^20.1.1",
-    "@angular/fire": "^7.1.1",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.1.1",
     "@angular/platform-browser": "^20.1.1",
     "@angular/platform-browser-dynamic": "^20.1.1",
     "@angular/router": "^20.1.1",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@popperjs/core": "^2.10.2",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
+    "@popperjs/core": "^2.11.8",
+    "@primeng/themes": "^19.1.4",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
-    "firebase": "^9.23.0",
+    "firebase": "^11.10.0",
     "glightbox": "^3.1.0",
     "isotope-layout": "^3.0.6",
     "ng-multiselect-dropdown": "^0.3.7",
     "ngx-color-picker": "^11.0.0",
+    "primeng": "^19.1.4",
     "rxfire": "^6.0.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.8.2",
     "swiper": "^7.2.0",
     "tslib": "^2.3.0",
-    "typed.js": "^2.0.12",
+    "typed.js": "^2.1.0",
     "waypoints": "^4.0.1",
     "zone.js": "~0.15.1"
   },
