--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.8",
     "@primeng/themes": "^19.1.4",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "firebase": "^11.10.0",
@@ -31,6 +32,7 @@
     "isotope-layout": "^3.0.6",
     "ng-multiselect-dropdown": "^0.3.7",
     "ngx-color-picker": "^11.0.0",
+    "postcss": "^8.5.6",
     "primeng": "^19.1.4",
     "rxfire": "^6.0.0",
     "rxjs": "^7.8.2",
@@ -56,6 +58,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "less": "^4.2.0",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   }
 }
