--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@primeng/themes": "^19.1.4",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/imagesloaded": "^4.1.7",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "firebase": "^11.10.0",
     "glightbox": "^3.1.0",
+    "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
     "ng-multiselect-dropdown": "^0.3.7",
     "ngx-color-picker": "^11.0.0",
