Prime NG ok, Page d'accueil OK

--- a/angular.json
+++ b/angular.json
@@ -36,10 +36,9 @@
               "src/environment"
             ],
             "styles": [
-              "src/assets/styles/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/aos/dist/aos.css"
+              "node_modules/aos/dist/aos.css",
+              "src/assets/styles/styles.scss"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
