--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng-multiselect-dropdown": "^0.3.7",
     "ngx-color-picker": "^11.0.0",
     "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "rxfire": "^6.0.0",
     "rxjs": "^7.8.2",
