--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "singleQuote": true,
   "tabWidth": 2,
   "useTabs": false,
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "printWidth": 100,
   "bracketSpacing": true,
   "arrowParens": "avoid"
