Update nettoyage fichier useless js/css

--- a/angular.json
+++ b/angular.json
@@ -27,18 +27,12 @@
             "polyfills": ["src/polyfills.ts"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets", "src/locale", "src/environment"],
+            "assets": ["src/assets", "src/locale", "src/environment"],
             "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/assets/styles/styles.scss"
             ],
-            "scripts": [
-              "node_modules/glightbox/dist/js/glightbox.min.js",
-              "node_modules/isotope-layout/dist/isotope.pkgd.min.js",
-              "node_modules/swiper/swiper-bundle.min.js",
-
-              "node_modules/waypoints/lib/noframework.waypoints.js"
-            ],
+            "scripts": [],
             "browser": "src/main.ts"
           },
           "configurations": {
@@ -98,21 +92,10 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets", "src/locale", "src/environment"],
+            "assets": ["src/assets", "src/locale", "src/environment"],
             "styles": [
-              "node_modules/primeicons/primeicons.css",
-              "src/assets/styles/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/aos/dist/aos.css"
-            ],
-            "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/aos/dist/aos.js",
-              "node_modules/glightbox/dist/js/glightbox.min.js",
-              "node_modules/isotope-layout/dist/isotope.pkgd.min.js",
-              "node_modules/swiper/swiper-bundle.min.js",
-              "node_modules/waypoints/lib/noframework.waypoints.js"
+              "src/assets/styles/styles.scss"
             ]
           }
         },
